release 1.10
- Fixed issue 778
  http://java.net/jira/browse/JERSEY-778
  * Breaking change *
  Modified WadlGenerator interface to be able to generate more than one response
  for one declared method; this is particularly useful when you are producing
  different element (entity types) with different status codes. See WADL spec
  (http://www.w3.org/Submission/wadl/#x3-40001.3) and/or Extended WADL
  webapp sample for more details.
- Fixed issue 794
  http://java.net/jira/browse/JERSEY-794
  Resources base in generated wadl does not reflect only first request anymore,
  redesigned cache to invalidate when request comes form different base URI.
- Fixed issue 29
  http://java.net/jira/browse/JERSEY-29
  Response to GET /application.wadl and OPTIONS /url now contains Last-modified
  header
- Fixed issue 789
  http://java.net/jira/browse/JERSEY-789
  OAuthServerFilter now compares consumer keys instead of consumer secrets
- Fixed issue 777
  http://java.net/jira/browse/JERSEY-777
  Provide support for byte[] in FormDataBodyPart
- Fixed issue 784
  http://java.net/jira/browse/JERSEY-784
  Base64.isBase64 fix (was not applicable to all values from byte value range) 
- Fixed issue 773
  http://java.net/jira/browse/JERSEY-773
  Regression: WADL resurces base URI customization stopped working in Jersey 1.9
- Fixed issue 763
  http://java.net/jira/browse/JERSEY-763
  VfsSchemeScanner cannot be run in Jboss-7 environment
- *Breaking change*
  Grizzly 2 ServletHandler support separated out to a new, jersey-grizzly2-servlet, module
- *Breaking change*
  Ant task for generating WADL moved from jersey-server to a newly created contribs/ant-wadl-task module
- *Breaking change*
  Servlet, EJB and CDI integration separated out from the jersey-server module
  When using Jersey in a Servlet container, jersey-server dependency need to be replaced with jersey-servlet

release 1.9.1